# learningpy

./: PyLab 1 - Data Cleaning with Pandas.ipynb  README.md  pyproject.toml  requirements.txt
brocode/: intro.py  learnnumpy.ipynb  test.ipynb  titanic.py
cleaning_trsa/: duplicate_test.py  duplicates.py  farklar.csv  graphs.ipynb  graphs.py  merged_semeval.csv  stuff.py
cleaning_trsa/ABSA_Semeval_Turkish/: README.md  tr_test_pinelinedwihtoutNERFormal_IMST1.4.conll  tr_train_pinelinedwihtoutNERFormal_IMST1.4.conll
cleaning_trsa/ABSA_Semeval_Turkish/TU_REST_SB1/: TU_REST_SB1_TEST.json  TU_REST_SB1_TEST.py
cleaning_trsa/semeval2016-task5/: graphs.ipynb  maildekiler.csv  no_target_xmlcleaner.py  scriptmerger.py  sitedekiler.csv  xml_cleaner.py
midterm2prep/: classification.ipynb  knn.ipynb  midterm2partc.ipynb  pca.ipynb  regression.ipynb
midterm3/: PyLab 10 - Decision Trees.ipynb  PyLab 8 - Exercise Logistic Regression.ipynb  PyLab 8 - Solution Logistic Regression.ipynb  PyLab 9 - Clustering.ipynb  PyLab 9 - K-Means Exercise with Solution.ipynb  decisiontrees.ipynb  pylab7.ipynb
newlabs/: PyLab 0 - Basics.ipynb  PyLab 1 - Data Cleaning with Pandas.ipynb  PyLab 2 - Scikit.ipynb  PyLab 3 - Plotting.ipynb  PyLab 4 - Linear Regression.ipynb  PyLab 5 - KNN.ipynb  PyLab 6 - Classification.ipynb  PyLab 7 - PCA_LDA_QDA.ipynb  exam_answers.ipynb
oldlabs/: LinearRegression Manual Implementation.ipynb  PyLab 0.1 Basics.ipynb  PythonLab3-Functions.ipynb  PythonLab4 - Numpy.ipynb  PythonLab5_Scikit.ipynb  PythonLab6_Pandas_and_Scikit.ipynb
oop/: company.py
(+28 files in other folders)
